--- a/src/pages/services/dryer-repair-los-angeles.astro
+++ b/src/pages/services/dryer-repair-los-angeles.astro
@@ -118,19 +118,25 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
         </div>
 
         <div class="list_left">
-          <a href="#left-menu-10">
+          <a href="#left-menu-4">
+            <h2>Dryer Brand We Repair</h2>
+          </a>
+        </div>
+
+        <div class="list_left">
+          <a href="#left-menu-5">
             <h2>How To Decide Whether To Repair Or Replace a Dryer</h2>
           </a>
         </div>
 
         <div class="list_left">
-          <a href="#left-menu-11">
+          <a href="#left-menu-6">
             <h2>Same Day Appliance Repair at Your Service</h2>
           </a>
         </div>
 
         <div class="list_left">
-          <a href="#left-menu-14">
+          <a href="#left-menu-7">
             <h2>FAQs</h2>
           </a>
         </div>
@@ -198,6 +204,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
         </div>
 
         <div class="page213-content" id="left-menu-3">
+
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Dryer Parts We Replace</h2>
@@ -206,6 +213,7 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
           </div>
 
           <div class="content__page-full-desc">
+
             <div class="content__page-desc-phot">
               <img
                 src="/dryer-repair/dryer-repair-2.webp"
@@ -230,14 +238,14 @@ const title ="Expert Same Day Dryer Repair Los Angeles - Fast & Reliable";
               <h3>Heating Element: Dryer is Leaving Damp Clothes, Taking Longer to Dry, has no Heat or Uneven Heat
               </h3>
               <p>
-The heating element is the heart of every electric dryer and produces the heat to dry the clothes. Over time, it can wear out or fail, and you may get no heat, uneven heat, or longer drying times. If your dryer is leaving clothes damp or taking longer to dry than usual, the heating element may be the problem. Our team is experienced in diagnosing heating element issues and can replace the faulty part and get your dryer working again. We know how important this part is. Many customers come to us specifically for this repair. 
+                The heating element is the heart of every electric dryer and produces the heat to dry the clothes. Over time, it can wear out or fail, and you may get no heat, uneven heat, or longer drying times. If your dryer is leaving clothes damp or taking longer to dry than usual, the heating element may be the problem. Our team is experienced in diagnosing heating element issues and can replace the faulty part and get your dryer working again. We know how important this part is. Many customers come to us specifically for this repair. 
               </p>
             </div>
 
             <div class="content__page-desc">
               <h3>Gas Valve Coil Replacement: The Dryer May Not Heat and Not Dry Completely</h3>
               <p>
-The gas valve coils are critical to maintaining heat throughout the cycle for gas dryers. These coils work with the igniter and flame sensor to control gas flow and ignition. When the gas valve coils fail, the dryer may not heat and not dry completely. At Same Day Appliance Repair, we service and replace gas valve coils for customers with this common problem. We prioritize safety and thoroughly check the entire ignition system to ensure your gas dryer runs efficiently and, most importantly, safely.
+                The gas valve coils are critical to maintaining heat throughout the cycle for gas dryers. These coils work with the igniter and flame sensor to control gas flow and ignition. When the gas valve coils fail, the dryer may not heat and not dry completely. At Same Day Appliance Repair, we service and replace gas valve coils for customers with this common problem. We prioritize safety and thoroughly check the entire ignition system to ensure your gas dryer runs efficiently and, most importantly, safely.
               
               </p>
             </div>
@@ -276,11 +284,13 @@ The gas valve coils are critical to maintaining heat throughout the cycle for ga
                 The blower wheel in your dryer blows air through the drum and venting system to expel moisture-laden air during drying. If the blower wheel is damaged or obstructed by lint or foreign objects, it can cause reduced airflow and longer drying times. Many customers call us when their dryer takes longer than usual to dry clothes, and the blower wheel is often the culprit. Our technicians are experts at inspecting and replacing damaged blower wheels to get your dryer’s airflow back to normal for efficient drying. Lint trap and vent system maintenance is critical to preventing blower wheel issues.
               </p>
             </div>
+
           </div>
+
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-5">
+        <div class="page213-content" id="left-menu-4">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Dryer Brand We Repair</h2>
@@ -604,12 +614,10 @@ The gas valve coils are critical to maintaining heat throughout the cycle for ga
           <Btn />
         </div>
 
-          </div>
-        
-        </div>
-        <div class="page213-content" id="left-menu-9">
+        <!-- <div class="page213-content" id="left-menu-9">
           <div class="content__page-full-hed">
-          <!--  <div class="content__page-hed-h">
+          <div class="content__page-hed-h">
+             
               <h2>
                 What is Included in Dryer Maintenance and How It Can Help
                 Prevent Repairs
@@ -693,9 +701,7 @@ The gas valve coils are critical to maintaining heat throughout the cycle for ga
                   mind that your appliance is in good hands.
                 </li>
               </ol>
-
-            -->
-
+          
               <h3>Why Choose Us</h3>
               <ul>
                 <li>
@@ -727,9 +733,9 @@ The gas valve coils are critical to maintaining heat throughout the cycle for ga
             </div>
           </div>
           <Btn />
-        </div>
+        </div> -->
 
-        <div class="page213-content" id="left-menu-10">
+        <div class="page213-content" id="left-menu-5">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>How To Decide Whether To Repair Or Replace a Dryer</h2>
@@ -884,7 +890,7 @@ The gas valve coils are critical to maintaining heat throughout the cycle for ga
           <Btn />
         </div>
 
-        <div class="page213-content" id="left-menu-11">
+        <div class="page213-content" id="left-menu-6">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>Same Day Appliance Repair at Your Service</h2>
@@ -909,7 +915,7 @@ The gas valve coils are critical to maintaining heat throughout the cycle for ga
           </div>
         </div>
 
-        <div class="page213-content" id="left-menu-14">
+        <div class="page213-content" id="left-menu-7">
           <div class="content__page-full-hed">
             <div class="content__page-hed-h">
               <h2>FAQs</h2>
