--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -10,6 +10,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import Contactbtn from "@components/contactbtn.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import Reviews from "@components/reviews.astro";
+import LogoBrands from "@components/js/logo-brands.astro";
 
 import "css/price/style_price.css";
 
@@ -748,6 +749,365 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
           </p>
         </div>
       </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <div class="page213-content" >
+        <div class="content__page-full-hed">
+          <div class="content__page-hed-h">
+            <h2>Dryer Brand We Repair</h2>
+          </div>
+          <div class="content__page-hed-desc"></div>
+        </div>
+
+
+        <div class="content__page-full-logo-brand">
+          <div class="ph-logo-brand">
+            <div class="logo-brand logo-bran-ph-1">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/whirlpool.webp"
+                  alt="Whirlpool"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-2">
+              <a href="/price-list/lg-dryer-repair-cost/">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/lg.webp"
+                  alt="LG"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-4">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/samsung.webp"
+                  alt="Samsung"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-3">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/GE-general-electric.webp"
+                  alt="GE general electric"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-5">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/maytag.webp"
+                  alt="Maytag"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-6">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/bosch.webp"
+                  alt="Bosch"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-7">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/frigidaire.webp"
+                  alt="Frigidaire"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-8">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kenmore.webp"
+                  alt="Kenmore"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-9">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/electrolux.webp"
+                  alt="Electrolux"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-10">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/amana.webp"
+                  alt="Amana"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-11">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/hotpoint.webp"
+                  alt="Hotpoint"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-12">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/kitchenAid.webp"
+                  alt="kitchenAid"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-13">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/jennAir.webp"
+                  alt="JennAir"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-14">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/haier.webp"
+                  alt="Haier"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-15">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/asko.webp"
+                  alt="Asko"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-16">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/miele.webp"
+                  alt="Miele"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-22">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/fisher-paykel.webp"
+                  alt="Fisher & Paykel"
+                  loading="lazy"
+                />
+              </a>
+            </div>   
+
+            <div class="logo-brand logo-bran-ph-24">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/speed-queen.webp"
+                  alt="Speed Queen"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+
+            <div class="logo-brand logo-bran-ph-25">
+              <a href="#">
+                <img
+                  width="300px"
+                  height="300px"
+                  src="/brand-logos/roper.webp"
+                  alt="Roper"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="full-desc-logo-brand">
+            <p>Brands of Dryer we repair</p>
+
+            <div class="desc-logo-brand logo-bran-d-1">
+              <h3><a href="#">Whirlpool Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-2">
+              <h3><a href="/price-list/lg-dryer-repair-cost/">LG Electronics Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-3">
+              <h3><a href="#">Samsung Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-4">
+              <h3><a href="#">General Electric Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-5">
+              <h3><a href="#">Maytag</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-6">
+              <h3><a href="#">Bosch Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-7">
+              <h3><a href="#">Frigidaire Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-8">
+              <h3><a href="#">Kenmore Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-9">
+              <h3><a href="#">Electrolux Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-10">
+              <h3><a href="#">Amana Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-11">
+              <h3><a href="#">Hotpoint Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-12">
+              <h3><a href="#">KitchenAid Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-13">
+              <h3><a href="#">JennAir Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-14">
+              <h3><a href="#">Haier Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-15">
+              <h3><a href="#">Asko Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-16">
+              <h3><a href="#">Miele Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-22">
+              <h3><a href="#">Fisher & Paykel Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-24">
+              <h3><a href="#">Speed Queen Dryer Repair</a></h3>
+            </div>
+
+            <div class="desc-logo-brand logo-bran-d-25">
+              <h3><a href="#">Roper Dryer Repair</a></h3>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <Btn />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       <div class="maintenance">
         <div class="head_pricing-policy head_pricing-policy_foto">
@@ -1760,3 +2120,4 @@ const title ="Dryer Repair Cost - Labor & Parts Pricing - Ultimate Guide";
   </Container>
  
 <Cta />
+<LogoBrands />
